--- a/call.html
+++ b/call.html
@@ -1,33 +1,55 @@
 <html>
 
 <head>
+  <style>
+    .sel_btn{
+        height: 21px;
+        padding: 0 11px;
+        background: #02bafa;
+        border: 1px #26bbdb solid;
+        border-radius: 3px;
+        /*color: #fff;*/
+        display: inline-block;
+        text-decoration: none;
+        font-size: 12px;
+        outline: none;
+        width: 80%;
+        height: 6%;
+        margin: 8%;
+        font-size: 65px;
+        text-align: center;
+    }
+    .ch_cls{
+        background: #e4e4e4;
+    }
+</style>
 </head>
 
 <body>
-  <a id='a' >打电话<a/>
+  <a class="sel_btn ch_cls" id="a" ><span>打电话</span></a>
   <script>
-	var a = document.getElementById('a');
-  var tel = getParameter('tel');
-  if(tel == null || tel == undefined || tel == ''){
-    alert('手机号，有误！');
-    document.getElementById('a').remove();
-  } else {
-    a.href='tel:'+ tel;
-    document.getElementById('a').click();
-    document.getElementById('a').remove();
-  }
-  function getParameter(param) {
-    var query = window.location.search;
-    var iLen = param.length;
-    var iStart = query.indexOf(param);
-    if (iStart == -1)
-    　return "";
-    iStart += iLen + 1;
-    var iEnd = query.indexOf("&", iStart);
-    if (iEnd == -1)
-    　return query.substring(iStart);
-    return query.substring(iStart, iEnd);
-  }
+    var a = document.getElementById('a');
+    var tel = getParameter('tel');
+    if(tel == null || tel == undefined || tel == ''){
+      alert('手机号，有误！');
+      document.getElementById('a').remove();
+    } else {
+      a.href='tel:'+ tel;
+      document.getElementById('a').click();
+      // document.getElementById('a').remove();
+    }
+    function getParameter(param) {
+      var query = window.location.search;
+      var iLen = param.length;
+      var iStart = query.indexOf(param);
+      if (iStart == -1)
+      　return "";
+      iStart += iLen + 1;
+      var iEnd = query.indexOf("&", iStart);
+      if (iEnd == -1)
+      　return query.substring(iStart);
+      return query.substring(iStart, iEnd);
+    }
   </script>
 </body>
 
