更新打电话页面样式

--- a/call.html
+++ b/call.html
@@ -5,6 +5,7 @@
     .sel_btn{
         height: 21px;
         padding: 0 11px;
+        line-height: 125%;
         background: #02bafa;
         border: 1px #26bbdb solid;
         border-radius: 3px;
