更新打电话页面样式

--- a/call.html
+++ b/call.html
@@ -3,47 +3,39 @@
 <head>
   <style>
     .sel_btn{
-        height: 21px;
-        padding: 0 11px;
-        line-height: 125%;
-        background: #02bafa;
-        border: 1px #26bbdb solid;
-        border-radius: 3px;
-        /*color: #fff;*/
         display: inline-block;
         text-decoration: none;
-        font-size: 12px;
         outline: none;
-        width: 80%;
+        line-height: 161%;
+        width: 30%;
         height: 6%;
-        margin: 8%;
+        margin: 60% 8% 8% 8%;
         font-size: 65px;
         text-align: center;
+        background-color: #6fd685;
+        color: black;
+        border-radius: 300px;
     }
     .text{
-        height: 21px;
-        padding: 0 11px;
-        background: #eeeeee;
-        border-radius: 3px;
-        /*color: #fff;*/
+        // background: #eeeeee;
         display: inline-block;
         text-decoration: none;
-        font-size: 12px;
         outline: none;
         width: 80%;
         height: 6%;
-        margin: 8%;
+        margin: 30% 8% 0% 8%;
+        line-height: 160%;
         font-size: 65px;
         text-align: center;
     }
     .ch_cls{
-        background: #e4e4e4;
+
     }
 </style>
 </head>
 
 <body>
-  <div>
+  <div style="text-align: center;">
     <text class="text" id='tel'></text>
     <a class="sel_btn ch_cls" id="a" ><span>拨号</span></a>
   </div>
