更新打电话页面样式

--- a/call.html
+++ b/call.html
@@ -33,7 +33,7 @@
 <body>
   <div style="text-align: center;">
     <text class="text" id='tel'></text>
-    <a class="sel_btn ch_cls" id="a" ><span>拨号</span></a>
+    <a class="sel_btn ch_cls" id="a" ><span><span style='font-size:77px;color:rgb(0, 0, 0);font-style:normal;font-weight:normal;'>&#9742;</span>&nbsp拨号</span></a>
   </div>
   <script>
     var a = document.getElementById('a');
